added trace id, successfully tested kafka messaging
